Fix issue with background not covering the entire page height

--- a/src/less/nav.less
+++ b/src/less/nav.less
@@ -242,7 +242,6 @@ global-menu-container {
   left: 0px;
   right: 0px;
   top: 101px;
-  height: 100%;
   display: flex;
 
   &.hidden {
